--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "config:npm": "json -I -f package.json -e 'this.main=\"lib/index.js\"'",
     "lint": "tslint --project .",
     "verify": "yarn lint && yarn tsc && yarn build",
-    "prepare": "yarn run build"
+    "prepare": "yarn run build",
     "prepublishOnly": "yarn verify && yarn config:npm",
     "postpublish": "yarn config:dev",
     "cleaning": "rm -rf node_modules && rm -f yarn.lock && yarn cache clean && yarn install && watchman watch-del-all && rm -fr $TMPDIR/react-*"
